--- a/Kconfig
+++ b/Kconfig
@@ -65,7 +65,7 @@ config KAS_INCLUDE_MAIN
 	default "kas-iot2050-swupdate.yml" if IMAGE_SWUPDATE
 	default "kas-iot2050-boot-pg1.yml" if IMAGE_BOOT_PG1
 	default "kas-iot2050-boot-pg2.yml" if IMAGE_BOOT_PG2
-	default "kas-iot2050-fwu-build.yml" if IMAGE_FWU_PKG
+	default "kas-iot2050-fwu-package.yml" if IMAGE_FWU_PKG
 
 comment "Image features"
 
