meta-hailo: Fix the CMA issue when PVU was integrated
PVU-based DMA isolation brings SWIO TLB to the table and
the maximum allowable number of contiguous slabs to map
is 128 by default, but meta-hailo requires more than 128.
Hence increase it to 256 when meta-hailo is included.

Signed-off-by: Li Hua Qian <huaqian.li@siemens.com>

--- a/kas/opt/meta-hailo.yml
+++ b/kas/opt/meta-hailo.yml
@@ -14,6 +14,8 @@ header:
 local_conf_header:
   hailo: |
     IOT2050_META_HAILO = "1"
+  hailo_override: |
+    OVERRIDES .= ":meta-hailo"
 
 repos:
   meta-iot2050:
