linux-iot2050: Add the missing kbuildtarget
The kbuildtarget is not preset in the iot2050-debian.conf, which
confuses isar while choosing the correct kbuildtarget version.

Signed-off-by: Baocheng Su <baocheng.su@siemens.com>

--- a/conf/distro/iot2050-debian.conf
+++ b/conf/distro/iot2050-debian.conf
@@ -17,7 +17,9 @@ DISTRO_NAME = "IOT2050 Debian System"
 HOSTNAME ??= "iot2050-debian"
 
 PREFERRED_VERSION_linux-iot2050 ?= "6.1.%"
+PREFERRED_VERSION_linux-iot2050-kbuildtarget ?= "${PREFERRED_VERSION_linux-iot2050}"
 PREFERRED_VERSION_linux-iot2050-rt ?= "6.1.%"
+PREFERRED_VERSION_linux-iot2050-rt-kbuildtarget ?= "${PREFERRED_VERSION_linux-iot2050-rt}"
 
 KERNEL_NAME ?= "cip"
 
