linux-iot2050: Mask the upstream recipe
The AUTOREV used in the upstream recipe causes the recipe to be parsed
regardless, which makes the parsing stage very slow if the connection to
GitHub is not good.

Signed-off-by: Baocheng Su <baocheng.su@siemens.com>

--- a/conf/distro/iot2050-debian.conf
+++ b/conf/distro/iot2050-debian.conf
@@ -23,6 +23,8 @@ PREFERRED_VERSION_linux-iot2050-rt-kbuildtarget ?= "${PREFERRED_VERSION_linux-io
 
 KERNEL_NAME ?= "cip"
 
+BBMASK:append = " linux-iot2050_.+-upstream\.bb"
+
 PREFERRED_VERSION_customizations ?= "0.1-iot2050-debian"
 PREFERRED_VERSION_customizations-debug ?= "0.1-iot2050-debian"
 
